# guppy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
scripts/: README.md  guppy-mrfriendly-intern.sh  guppy-prive.sh  guppy.sh  period.sh
src/: args.rs  auth.rs  drive.rs  main.rs
