[package]
name = "guppy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["macros", "rt", "fs"] }
tokio-util = "0.7.8"
jwt-simple = "0.11.5"
time = "0.3.22"
async-stream = "0.3.5"
indicatif = "0.17.5"
futures-util = "0.3.28"